Adds font awesome

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome</h1>
+<div class="jumbotron connect">
+  <h1 class="text-center">Welcome to DevMatch</h1>
+  <p class="text-center">A membership site where entrpreneurs can meet developers.</p>
+</div>
