--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <%= flash[:notice] %>
+      <%= flash[:error] %>
       <div class="well">
         <%= form_for @contact do |f| %>
 
