--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
         </div>
       </div>
     </nav>
+    <div class="container">
+      <% flash.each do |type, message| %>
+        <%= content_tag :div, message, class: "alert alert-#{type}" %>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
