Adds basic forms

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,3 +2,26 @@
   <h1 class="text-center">Welcome to DevMatch</h1>
   <p class="text-center">A membership site where entrpreneurs can meet developers.</p>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic Membership</h2>
+        <p>
+          Sign up for free and get basic access to the community.
+        </p>
+        <br>
+        <%= link_to 'Sign Up for a Basic Membership', new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro Membership</h2>
+        <p>
+          Sign up for a pro account for $10 a month and get basic access to the community and contact information.
+        </p>
+        <%= link_to 'Sign Up for a Pro Membership', new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+  </div>
+</div>
