--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,6 +1,9 @@
 <h2>Pro Account Sign Up</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'pro_form'}) do |f| %>
   <%= devise_error_messages! %>
+
+  <%= hidden_field_tag 'plan', params[:plan] %>
+
   <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: "form-control" %>
@@ -44,6 +47,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: "btn btn-default" %>
+    <%= f.submit "Sign up", class: "btn btn-default", id: 'form-signup-btn' %>
   </div>
 <% end %>
