--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container relative">
       <% flash.each do |type, message| %>
         <%= content_tag :div, message, class: "alert alert-#{type}" %>
       <% end %>
