--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,13 @@
-<%= @user.profile.first_name %> <%= @user.profile.last_name %>
-<%= @user.profile.job_title %>
-<% if current_user.plan_id == 2 %>
-  <%= @user.profile.phone_number %>
-  <%= @user.profile.contact_email %>
-<% end %>
-<%= @user.profile.description %>
+<div class="container"><div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <%= image_tag @user.profile.avatar.url, class: 'img-responsive' %>
+      <%= @user.profile.first_name %> <%= @user.profile.last_name %>
+      <%= @user.profile.job_title %>
+      <% if current_user.plan_id == 2 %>
+        <%= @user.profile.phone_number %>
+        <%= @user.profile.contact_email %>
+      <% end %>
+      <%= @user.profile.description %>
+      </div>
+  </div>
+  </div>
