--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,20 @@
-<div class="container"><div class="row">
-    <div class="col-md-8 col-md-offset-2">
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
       <%= image_tag @user.profile.avatar.url, class: 'img-responsive' %>
-      <%= @user.profile.first_name %> <%= @user.profile.last_name %>
-      <%= @user.profile.job_title %>
-      <% if current_user.plan_id == 2 %>
-        <%= @user.profile.phone_number %>
-        <%= @user.profile.contact_email %>
-      <% end %>
-      <%= @user.profile.description %>
+    </div>
+    <div class="col-md-8">
+      <h1><%= @user.profile.full_name %></h1>
+      <h3><span><%= job_title_icon %> </span><%= @user.profile.job_title %></h3>
+
+        <% if current_user.plan_id == 2 %>
+          <div class="well">
+            <h3>Contact Information</h3>
+            <%= @user.profile.phone_number %>
+            <%= @user.profile.contact_email %>
+          </div>
+        <% end %>
+      <p><%= @user.profile.description %></p>
       </div>
   </div>
-  </div>
+</div>
