--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,9 @@
                   <h2><%= user.profile.full_name %></h2>
                 <% end %>
                 <p><%= user.profile.job_title %></p>
+                <% if user.plan_id == 2 %>
+                  <span class="label label-danger">Pro</span>
+                <% end %>
               </div>
             </div>
           </li>
